--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Cinema</string>
+
+    <string name="movies_screen">Фильмы</string>
+    <string name="profile_screen">Профиль</string>
 </resources>
