--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="movies_screen">Фильмы</string>
     <string name="profile_screen">Профиль</string>
+    <string name="hint_search_query">Поиск</string>
 </resources>
