--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Cinema</string>
 
     <string name="movies_screen">Фильмы</string>
+    <string name="subscriptions_screen">Подписки</string>
     <string name="profile_screen">Профиль</string>
     <string name="hint_search_query">Поиск</string>
 </resources>
