--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="subscriptions_screen">Подписки</string>
     <string name="profile_screen">Профиль</string>
     <string name="hint_search_query">Поиск</string>
+    <string name="cancel">Отмена</string>
+    <string name="ok">Ок</string>
 </resources>
